  in include/config.h.
- Fixed ~5 compiler warnings at *NIX and ~20 at windows. Some of them _could_ have caused problems.
- Moved EOS debugging code to DEBUGMODE.
- Fixed a channel sync bug reported by thilo&Rocko (#0001218).
- Fixed minor config parser memleak reported by AngryWolf (#0001214).
- Fixed bug regarding hidden opers + m_whois cleanup (#0001208).
- Made SSL users unable to -z themselves, also added 2 flags to /stats S,
  reported by Joolz (#0001200).
- Fixed problem with opers having both 'admin' and 'coadmin' causing double-notices (#0001043).
- +f now also allows you to specify an 'action'. For example +f [30j#R]:15 will set the
  channel +R (instead of +i) if more than 30 joins in 15 seconds are reached.
  The following combinations are allowed: c#m, c#M, j#R and m#M. (docs will be updated later)
- Probably fixed a bug regarding 'setting mode' notice with +f (was sometimes sent to non-chanops).
- Fixed multiple chmode +u bugs: remote join, netjoin, +mu relay between servers, kick and
  a part bug. Most of them reported by Lx (#0001097).
- Fixed a bug in +f + modes-on-join + 't' subfloodtype, reported by Rocko (#0001228).
- Fixed a crashbug with +f and services, reported by Rocko (#0001227).
- And another +f + modes-on-join one...
- Made anti away flood system work just like anti nick flood (#0001205).
  NO_FLOOD_AWAY is now enabled and away-flood is set to 4 per 120s by default.
- Fixed a double OperOverride notice bug reported by DukePyrolator (#0001180).
- Doc fixes/updates reported by Angrywolf (#0001163, #0001176).
- Fixed a /rehash crash regarding badword all & regex badwords, reported by Angrywolf (#0001230).
- Fixed an old bug where allow::hostname localhost (or *@localhost) didn't work (#0001115).
- Fixed a chroot bug, reported by iceblade (#0001112).
- Badwords filtering is now only done for local clients, previously every server was filtering
  the message. This will reduce CPU usage, especially at hubs (#0001022).